--- a/app/css/responsive.css
+++ b/app/css/responsive.css
@@ -96,8 +96,7 @@
 
   .request-categories2,
   #request-list {
-    width: 45%;
-    margin: 0 2.5%;
+    width: 47.5%;
   }
 }
 
